@@ -43,7 +43,7 @@ pointdict['GG_direct'] = {
     204699:(1050,900),
 }
 
-pointdict['GG_onestep'] = {
+pointdict['GG_onestepCC'] = {
     174421:(1300,160,60),
     174460:(1500,160,60),
     174467:(1500,860,60),
@@ -57,9 +57,6 @@ pointdict['GG_onestep'] = {
     204895:(1500,1212,60),
     204896:(1600,1292,60),
     204897:(1700,1372,60),
-    }
-
-pointdict['GG_onestepCC'] = {
     174391:(1225,625,25),
     174396:(1385,705,25),
     204639:(1545,785,25),
